refactor: make the reconciliation cycle query less kubernetes API